fixed alignment by bas mixin btn-sm and padding 0 for all icons

--- a/less/jquery.ui.menu.less
+++ b/less/jquery.ui.menu.less
@@ -75,5 +75,4 @@
 .ui-menu .ui-menu-icon {
 	position: static;
 	float: right;
-    margin-top: 0.2em;
 }
